feat: updated @wireshape/data-dsk readme and keywords

--- a/packages/data-sdk/test/index.html
+++ b/packages/data-sdk/test/index.html
@@ -27,7 +27,7 @@
         // Initialize the SDK with static parameters
         const wireshape = new WireshapeDataSDK({
             language: 'pt',
-            integrationKey: 'yourIntegrationKey'
+            integrationKey: 'yourIntegrationKey' // Get an Integration Key on https://data.wireshape.com/auth
         });
         wireshape.initialize();
 
