--- a/packages/data-sdk/test/index.html
+++ b/packages/data-sdk/test/index.html
@@ -23,6 +23,8 @@
 
     <script type="module">
         import WireshapeDataSDK from '../dist/index.min.js';
+        // If installed npm package
+        // import WireshapeDataSDK from "@wireshape/data-sdk"
 
         // Initialize the SDK with static parameters
         const wireshape = new WireshapeDataSDK({
